<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/themeFragment"
        android:icon="@drawable/ic_nav_theme"
        android:title="@string/nav_theme" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/noticeFragment"
        android:icon="@drawable/ic_nav_notice"
        android:title="@string/nav_notice" />
    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_nav_info"
        android:title="@string/nav_info" />
</menu>
